--- a/package.json
+++ b/package.json
@@ -27,6 +27,9 @@
     },
     "dependencies": {
         "ethers": "^6.7.1",
+        "laravel-echo": "^1.15.3",
+        "pusher-js": "^8.3.0",
+        "socket.io-client": "^4.7.2",
         "toastr": "^2.1.4",
         "web3": "^4.1.1"
     }
