--- a/package.json
+++ b/package.json
@@ -27,10 +27,15 @@
     },
     "dependencies": {
         "ethers": "^6.7.1",
+        "js-cookie": "^3.0.5",
         "laravel-echo": "^1.15.3",
+        "laravel-echo-server": "^1.6.3",
         "pusher-js": "^8.3.0",
+        "socket.io": "^4.7.2",
         "socket.io-client": "^4.7.2",
         "toastr": "^2.1.4",
+        "vue-echo": "^1.0.2",
+        "vue-socket.io": "^3.0.10",
         "web3": "^4.1.1"
     }
 }
