--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "laravel-echo": "^1.15.3",
         "laravel-echo-server": "^1.6.3",
         "pusher-js": "^8.3.0",
+        "redis-server": "^1.2.2",
         "socket.io": "^4.7.2",
         "socket.io-client": "^4.7.2",
         "toastr": "^2.1.4",
