--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
         "laravel/tinker": "^2.5",
         "laravel/ui": "^2.4",
         "predis/predis": "^2.2",
-        "pusher/pusher-php-server": "~3.0",
+        "pusher/pusher-php-server": "^7.2",
         "simplito/elliptic-php": "^1.0",
         "yoeunes/toastr": "^2.0"
     },
