--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
         "vuex": "3.1.0"
     },
     "dependencies": {
+        "@noble/secp256k1": "^1.5.3",
         "@walletconnect/client": "^1.6.4",
+        "@walletconnect/web3-provider": "^1.8.0",
         "ethers": "^6.7.1",
         "js-cookie": "^3.0.5",
         "laravel-echo": "^1.15.3",
