--- a/package.json
+++ b/package.json
@@ -26,8 +26,7 @@
         "vuex": "3.1.0"
     },
     "dependencies": {
-        "@noble/secp256k1": "^1.5.3",
-        "@walletconnect/client": "^1.6.4",
+        "@noble/secp256k1": "^2.0.0",
         "@walletconnect/web3-provider": "^1.8.0",
         "ethers": "^6.7.1",
         "js-cookie": "^3.0.5",
@@ -40,6 +39,7 @@
         "toastr": "^2.1.4",
         "vue-echo": "^1.0.2",
         "vue-socket.io": "^3.0.10",
-        "web3": "^4.1.1"
+        "web3": "^4.1.1",
+        "web3modal": "^1.9.12"
     }
 }
