--- a/.env.example
+++ b/.env.example
@@ -1,57 +1,54 @@
-APP_NAME="didakoo"
+APP_NAME=didakoo
 APP_ENV=local
 APP_KEY=base64:ZlvlJ7/v3oDT/ZADJOnvL7XfeSiSf2d8ss2MkNmKGjs=
 APP_DEBUG=true
-APP_URL=127.0.0.1
+APP_URL=http://127.0.0.1:8000/
 
-# Database connection information for the main table.
+LOG_CHANNEL=stack
+
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=didakoo
 DB_USERNAME=didakoo
-DB_PASSWORD=774474
+DB_PASSWORD=12345678
 
-# Email configuration
-MAIL_MAILER=smtp
-MAIL_HOST=smtp.mailtrap.io
-MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS="info@didakoo.com"
-MAIL_FROM_NAME="${APP_NAME}"
+BROADCAST_DRIVER=pusher
+CACHE_DRIVER=file
+QUEUE_CONNECTION=sync
+QUEUE_DRIVER=redis
+SESSION_DRIVER=file
+SESSION_LIFETIME=120
 
-# Queue configuration
-QUEUE_CONNECTION=database
-QUEUE_NAME_EMAIL=emails
+REDIS_HOST=127.0.0.1
+REDIS_PASSWORD=null
+REDIS_PORT=6379
 
-# SMSAPI.com information
-SMS_OAUTHTOKEN=
-SMS_ENABLED=false
-SMS_LOW_BALANCE=10
+MAIL_DRIVER=smtp
+MAIL_HOST=smtp.gmail.com
+MAIL_PORT=465
+MAIL_USERNAME=myvesuride@gmail.com
+MAIL_PASSWORD=myvesu888
+MAIL_ENCRYPTION=ssl
 
-# Two step authentication
-TWOFA_ENABLED=true
-TWOFA_CODELENGTH=6
-TWOFA_CLIENTLENGTH=100
+AWS_ACCESS_KEY_ID=
+AWS_SECRET_ACCESS_KEY=
+AWS_DEFAULT_REGION=us-east-1
+AWS_BUCKET=
 
-# Document signing configuration.
-SIGNKEY=
-PATH_NODE=default
-PATH_NPM=default
-SERVER_IP=
-STAGING_IP=
+PUSHER_APP_ID=1693333
+PUSHER_APP_KEY=88dfab940f882d473671
+PUSHER_APP_SECRET=615883f737ed0cbfe2f6
+PUSHER_APP_CLUSTER=mt1
 
-# Default values to fill in for user login: use for debug only!
-#VITE_USER=
-#VITE_PASS=
-#VITE_MOBILE=
+MIX_PUSHER_APP_KEY=88dfab940f882d473671
+MIX_PUSHER_APP_CLUSTER=mt1
+MIX_SERVER_APP_URL=https://didakoo.xyz
 
-# VITE_ variables are injected in Javascript
-VITE_SPA_LANG="${APP_LANG}"
-VITE_TWOFA_CODELENGTH="${TWOFA_CODELENGTH}"
-VITE_WEBSITE_LANGUAGES="${APP_LANG}"
-VITE_WEBSITE_NAME="${APP_NAME}"
+WEBSOCKET_RECIEVER_URI=
+WEBSOCKET_PLAYBACK_URI=
+
+LARAVEL_ECHO_SERVER_AUTH_HOST="http://localhost"
+LARAVEL_ECHO_SERVER_PORT=6001
 
 MIX_INFURA_ID=340e6262348049c2a8916fec7bd959e9
