--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "laravel-mix": "^5.0.1",
         "lodash": "^4.17.19",
         "popper.js": "^1.12",
+        "raw-loader": "^4.0.2",
         "resolve-url-loader": "^2.3.1",
         "sass": "^1.20.1",
         "sass-loader": "^8.0.0",
@@ -27,7 +28,7 @@
     },
     "dependencies": {
         "@noble/secp256k1": "^2.0.0",
-        "@walletconnect/web3-provider": "^1.8.0",
+        "@walletconnect/web3-provider": "^1.7.8",
         "ethers": "^6.7.1",
         "js-cookie": "^3.0.5",
         "laravel-echo": "^1.15.3",
@@ -39,7 +40,6 @@
         "toastr": "^2.1.4",
         "vue-echo": "^1.0.2",
         "vue-socket.io": "^3.0.10",
-        "web3": "^4.1.1",
-        "web3modal": "^1.9.12"
+        "web3": "^1.7.3"
     }
 }
