--- a/.env.example
+++ b/.env.example
@@ -36,13 +36,13 @@ AWS_SECRET_ACCESS_KEY=
 AWS_DEFAULT_REGION=us-east-1
 AWS_BUCKET=
 
-PUSHER_APP_ID=1693333
-PUSHER_APP_KEY=88dfab940f882d473671
-PUSHER_APP_SECRET=615883f737ed0cbfe2f6
-PUSHER_APP_CLUSTER=mt1
+PUSHER_APP_ID=1714823
+PUSHER_APP_KEY=aaf9c43e10a6d5e65efe
+PUSHER_APP_SECRET=c6ca7209a8172614390f
+PUSHER_APP_CLUSTER=eu
 
-MIX_PUSHER_APP_KEY=88dfab940f882d473671
-MIX_PUSHER_APP_CLUSTER=mt1
+MIX_PUSHER_APP_KEY=aaf9c43e10a6d5e65efe
+MIX_PUSHER_APP_CLUSTER=eu
 MIX_SERVER_APP_URL=https://didakoo.xyz
 
 WEBSOCKET_RECIEVER_URI=
