Fix color nft in rank page and board color combination.

--- a/.env.example
+++ b/.env.example
@@ -50,5 +50,5 @@ WEBSOCKET_PLAYBACK_URI=
 
 LARAVEL_ECHO_SERVER_AUTH_HOST="http://localhost"
 LARAVEL_ECHO_SERVER_PORT=6001
-
+MIX_ALCHEMY_API_KEY=lD9Ejx86AdPDGd71wgmxBA-578OwPN_g
 MIX_INFURA_ID=340e6262348049c2a8916fec7bd959e9
