--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
         "redis-server": "^1.2.2",
         "socket.io": "^4.7.2",
         "socket.io-client": "^4.7.2",
+        "sweetalert2": "^11.10.1",
         "toastr": "^2.1.4",
         "vue-echo": "^1.0.2",
         "vue-socket.io": "^3.0.10"
